--- a/Spring-cloud/springboot-zuul-server/src/main/resources/application.properties
+++ b/Spring-cloud/springboot-zuul-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8762
 spring.application.name=zuul-server
 eureka.client.service-url.default-zone=http://localhost:8761/eureka/
-
+ribbon.ReadTimeout=60000
 # A prefix that can added to beginning of all requests.
 #zuul.prefix=/api
 
