--- a/CloudNative-application/springboot-hello-world/pom.xml
+++ b/CloudNative-application/springboot-hello-world/pom.xml
@@ -13,9 +13,16 @@
     <version>1.0-SNAPSHOT</version>
     <name>springboot-hello-world</name>
     <url>http://maven.apache.org</url>
+
     <properties>
         <docker-maven-plugin>0.33.0</docker-maven-plugin>
+        <java.version>1.8</java.version>
+        <!-- optional!!-->
+        <fabric8.enricher.fmp-service.type>NodePort</fabric8.enricher.fmp-service.type>
+        <fabric8.namespace>myproject</fabric8.namespace>
+
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -50,7 +57,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <!-- Single JAR plugin-->
-            <plugin>
+            <!--<plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
                     <archive>
@@ -71,7 +78,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <!-- fabric8 docker plugin -->
             <plugin>
                 <groupId>io.fabric8</groupId>
@@ -97,6 +104,12 @@
                         </image>
                     </images>
                 </configuration>
+            </plugin>
+            <!-- fabric8 kubernates/Openshift plugin-->
+            <plugin>
+                <groupId>io.fabric8</groupId>
+                <artifactId>fabric8-maven-plugin</artifactId>
+                <version>4.4.1</version>
             </plugin>
         </plugins>
     </build>
