--- a/CloudNative-application/springboot-ext-for-ignite/src/main/resources/application.yml
+++ b/CloudNative-application/springboot-ext-for-ignite/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 ignite:
-  igniteInstanceName: properties-instance-name
+  igniteInstanceName: spring-boot-embeded-ignite-instance
   communicationSpi:
     localPort: 5555
   dataStorageConfiguration:
     defaultDataRegionConfiguration:
       initialSize: 10485760 #10MB
     dataRegionConfigurations:
-      - name: my-dataregion
+      - name: dataregion
         initialSize: 104857600 #100MB
   cacheConfiguration:
     - name: quote
@@ -18,4 +18,3 @@ ignite:
           fields:
             ID: java.lang.Long
             VAL: java.lang.String
-    - name: my-cache
