--- a/Reactive/Spring/pom.xml
+++ b/Reactive/Spring/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <modules>
-    <module>spring-rscoket</module>
+    <module>spring-rscoket-server</module>
+    <module>spring-rscoket-client</module>
   </modules>
 </project>
