--- a/Reactive/Spring/spring-rscoket-client/pom.xml
+++ b/Reactive/Spring/spring-rscoket-client/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.blu.reactive</groupId>
-	<artifactId>spring-rscoket</artifactId>
+	<artifactId>spring-rscoket-client</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-rscoket</name>
 	<description>Demo project for Spring Boot</description>
@@ -17,10 +17,6 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-		<!--<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
