--- a/Reactive/Spring/spring-rscoket-client/pom.xml
+++ b/Reactive/Spring/spring-rscoket-client/pom.xml
@@ -32,6 +32,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.shell</groupId>
+			<artifactId>spring-shell-starter</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
