--- a/Reactive/Spring/spring-rscoket-client/pom.xml
+++ b/Reactive/Spring/spring-rscoket-client/pom.xml
@@ -5,7 +5,9 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.7.RELEASE</version>
+		<!-- Essential for the first 3 examples-->
+		<!--<version>2.2.7.RELEASE</version>-->
+		<version>2.3.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.blu.reactive</groupId>
