--- a/21issues/spring-boot-crac/pom.xml
+++ b/21issues/spring-boot-crac/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.blu.reactive</groupId>
 	<artifactId>spring-boot-crac</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>spring boot crac test on Mac</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
