--- a/21issues/grpc/grpc-client/pom.xml
+++ b/21issues/grpc/grpc-client/pom.xml
@@ -3,13 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<!--<groupId>org.springframework.boot</groupId>
+		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version> -->
-		<groupId>com.blu.grpc</groupId>
-		<artifactId>grpc-pom</artifactId>
-		<version>1.0-SNAPSHOT</version>
-
+		<version>3.2.5</version>
 		<relativePath/>
 	</parent>
 	<groupId>com.blu.grpc</groupId>
@@ -20,18 +16,21 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-<dependencies/>
-		<!--<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+	<dependencies>
+
+		<dependency>
+			<groupId>net.devh</groupId>
+			<artifactId>grpc-spring-boot-starter</artifactId>
+			<version>3.1.0.RELEASE</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>com.blu.grpc</groupId>
+			<artifactId>grpc-proto</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-	</dependencies>-->
+
+	</dependencies>
 
 	<build>
 		<plugins>
