--- a/21issues/grpc/grpc-proto/pom.xml
+++ b/21issues/grpc/grpc-proto/pom.xml
@@ -2,12 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<!--<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.5</version>
-		<relativePath/>
-	</parent>-->
 	<groupId>com.blu.grpc</groupId>
 	<artifactId>grpc-proto</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -15,17 +9,75 @@
 	<description>grpc proto module</description>
 	<properties>
 		<java.version>17</java.version>
+		<os-maven-plugin.version>1.7.0</os-maven-plugin.version>
+		<!-- Plugins -->
+		<protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
+<!--		<protoc.version>3.21.1</protoc.version>-->
+<!--		<io.grpc.version>1.61.1</io.grpc.version>-->
+		<protoc.version>3.12.0</protoc.version>
+		<io.grpc.version>1.36.0</io.grpc.version>
+		<javax.annotation-api.version>1.3.2</javax.annotation-api.version>
+		<os.detected.classifier>osx-x86_64</os.detected.classifier>
+
 	</properties>
-	<dependencies/>
+
+	<dependencies>
+
+		<!--<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-services</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>-->
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-protobuf</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.grpc</groupId>
+			<artifactId>grpc-stub</artifactId>
+			<version>${io.grpc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>${javax.annotation-api.version}</version>
+		</dependency>
+	</dependencies>
 
 
-	<!--<build>
+	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.xolstice.maven.plugins</groupId>
+				<artifactId>protobuf-maven-plugin</artifactId>
+				<version>${protobuf-maven-plugin.version}</version>
+				<configuration>
+					<protocArtifact>
+						com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}
+					</protocArtifact>
+					<pluginId>grpc-java</pluginId>
+					<pluginArtifact>
+						io.grpc:protoc-gen-grpc-java:${io.grpc.version}:exe:${os.detected.classifier}
+					</pluginArtifact>
+				</configuration>
+				<executions>
+					<execution>
+						<id>client-code-generation</id>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>server-code-generation</id>
+						<goals>
+							<goal>compile-custom</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
-	</build>-->
+	</build>
+
 
 </project>
