--- a/21issues/grpc/pom.xml
+++ b/21issues/grpc/pom.xml
@@ -16,8 +16,8 @@
 
     <modules>
         <module>grpc-proto</module>
-        <!--<module>grpc-server</module>
-        <module>grpc-client</module>-->
+        <module>grpc-server</module>
+        <module>grpc-client</module>
     </modules>
     <dependencyManagement>
         <dependencies/>
