--- a/21issues/grpc/grpc-client/src/main/resources/application.properties
+++ b/21issues/grpc/grpc-client/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 grpc.client.grpc-server.address=static://localhost:8000
 grpc.client.grpc-server.negotiation-type=plaintext
-grpc.server.port=8001
+#grpc.server.port=8001
