--- a/databases/junodb/java-examples/pom.xml
+++ b/databases/junodb/java-examples/pom.xml
@@ -90,6 +90,23 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!--<plugin>
+				<artifactId>exec-maven-plugin</artifactId>
+				<groupId>org.codehaus.mojo</groupId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>Generate secrets for TLS</id>
+						<phase>install</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<executable>${project.basedir}/src/main/resources/secrets/gensecrets.sh</executable>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>-->
 		</plugins>
 	</build>
 
